# social_media_analyzer_airflow

./: .env.runpod  .gitignore  AIRFLOW_SETUP_GUIDE.md  Dockerfile.airflow  LOCAL_SETUP_GUIDE.md  RUNPOD_SETUP_GUIDE.md  airflow.cfg  airflow_requirements.txt  docker-compose.airflow.yml  docker-compose.final.yml  docker-compose.runpod.yml  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  setup_airflow.sh  setup_local_airflow.sh  setup_runpod.sh  setup_runpod_simple.sh  start_mlflow.sh
dags/: ml_pipeline_dag.py
data_backup/: train.py
mlruns/models/best_model/: meta.yaml
modelfactory/collect/: process_tiktok_data.ipynb
modelfactory/data/tiktok_data/: tiktok_data.parquet
modelfactory/preprocess/: preprocess.py
modelfactory/utils/: mlflow_utils.py
