[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-analyzer-airflow"
version = "0.1.0"
description = "Social Media Engagement Prediction ML Pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core ML dependencies
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    # AWS and MLflow
    "boto3>=1.29.0",
    "s3fs>=2023.10.0",
    "mlflow>=2.8.0",
    # Text processing
    "emoji>=2.8.0",
    "regex>=2023.10.3",
    "ftfy>=6.1.1",
    # Utilities
    "python-json-logger>=2.0.7",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    # FastAPI (for inference)
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["modelfactory*"]

[tool.setuptools.package-data]
modelfactory = ["**/*.py"]

[project.scripts]
# Optional: Create command-line scripts
train-model = "sagemaker.train:main"

